# DisSysLab

./: .env.example  .gitignore  404.html  API_KEY_SETUP.md  CHANGELOG.md  CLAUDE_CONTEXT.md  CLAUDE_CONTEXT_APP.md  CLAUDE_CONTEXT_CODE_GENERATOR.md  CLAUDE_CONTEXT_OFFICE.md  CLAUDE_CONTEXT_OFFICE_PARSER.md  CLAUDE_CONTEXT_ROLE_PARSER.md  CONTRIBUTING.md  DOCUMENTATION_STRATEGY.md  DisSysLab_Colab_Wizard_Private.ipynb  DisSysLab_TrackA_Jupyter_Wizard.ipynb  GETTING_STARTED.md  LICENSE  Makefile  NextSteps.md  PLAN_FOR_DIS_SYS_LAB.pages  README.md  README.pypi.md  README_2.md  README_Directory.md  README_NamingConvention.md  RESEARCH_TODO.md  ROADMAP.md  TUTORIAL.md  ToDo  Untitled.ipynb  anomaly_stream.jsonl  assistant_spec_v_1.md  basic_network_archive.jsonl  briefing.jsonl  code_walkthrough.md  core.py  digest.md  editorial_output.jsonl  filtered_output.jsonl  implementation_plan.md  (+28 more)
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: test.yml
algorithms/Termination/: Termination_1.py
app_test/: office.md
app_test/roles/: checker.py  humidity_sensor.py  temp_sensor.py
chapters/01_networks_blocks_connections/: README.md  basic_network.py
chapters/02_msg_as_dict/: README.md
chapters/ch01_networks/: DisSysLab_Colab_Wizard.ipynb  README.md  README_1.md  README_3.md  README_5.md  basic_network.py  mutables.py  simple_broadcast.py  simple_filter.py  simple_network.py
chapters/ch02_keys/: README.md  reverse_example.py
chapters/ch02_sources/: clean_openmeteo.py  feed_from_posts.py  generate_replay_data.py  live_kv_console.py  rolling_stats_anom_forecast.py  rss_NASA_simple_demo.py
chapters/ch06_connect/: README.md  cockpit_rss_pretty.py
chapters/ch15_user_interface/: playground.ipynb
components/: __init__.py
components/sinks/: __init__.py  console_display.py  console_sink.py  demo_email_alerter.py  demo_file_writer.py  demo_webhook.py  file_writer.py  gmail_alerter.py  gmail_sink.py  jetstream_filter.py  jetstream_in.py  mcp_sink.py  mock_email_alerter.py  numeric_rest_in.py  photo_dashboard.py  reddit_in.py  rl_dashboard.py  sink_jsonl_recorder.py  sink_list_collector.py  sink_simple_file.py  test_webhook.py
components/sources/: __init__.py  bluesky_jetstream_source.py  bluesky_source.py  calendar_source.py  cartpole_source.py  clock_source.py  demo_bluesky.py  demo_file.py  demo_job_source.py  demo_rss_source.py  file_source.py  gmail_source.py  list_source.py  mcp_source.py  mock_rss_source.py  rss_normalizer.py  rss_source.py  test_bluesky.py  web_scraper.py
components/transformers/: __init__.py  ai_agent.py  claude_agent.py  composition_analyzer.py  demo_ai_agent.py  demo_jobs.py  demo_salary.py  demo_sentiment.py  demo_spam.py  demo_topic.py  (+11 more)
custom_app/: .gitignore  README.md  wardrobe_stylist.md
dev/: MODULE_STRUCTURE_GUIDE.md  README_Directory.md  README_Makefile.md  RELEASE.md  mkdocs.yml
dissyslab/: __init__.py  blocks_implementation.md  builder.md  builder.py  cli.py  cli_chat.py  composed_agent.py  core.py  network.md  network.py  network_implementation.md  os_agent.py  snapshot.py
docs/: 01_getting_started.md  ADD_A_BACKEND.md  BUILD_APPS.md  EXTENDING.md  GETTING_STARTED.md  HOW_IT_WORKS.md  LANGUAGE_MODELS.md  MAKE_OFFICE.md  MODULE_ORDER.md  PATTERN_sense_think_respond.md  README.md  ROADMAP.md  SOURCES_AND_SINKS.md  TROUBLESHOOTING.md  block_registry.json  index.md  teaching_stateful_sources.md
dsl/: CONTINUE.md  __init__.py  architecture.md  blocks_implementation.md  builder.md  builder.py  builder_implementation.md  composed_agent.py  core.md  core.py  core_implementation.md  decorators.py  graph.py  network.py  os_agent.py  roadmap.py  roadmap.txt  stream_generators.py  stream_transformers.py
examples/: Mock_And_Real.md  README.md  Untitled.ipynb  agent_2.py  agent_OpenAI.py  agent_entity_extractor.py  agent_sentiment_scorer.py  agent_summarizer.py  blocks_and_agents.py  connect_blocks_to_form_networks.py  example_agent_network_template.py  graph_pipeline.py  graph_simple_source_sink.py  jetstream_demo.py  live_kv_console.py  numpy_example_0.py  pipeline_out.py  rss_NASA_demo.py  rss_NASA_simple_demo.py  rss_alerts_demo.py  simple_agent.py  simple_agent_2.py  simple_broadcast.py  simple_entity_extractor.py  simple_merge.py  simple_network.py  simple_network_2.py  simple_network_claude.py  simple_pipeline.py  simple_sentiment_analysis.py  simple_source_sink.py  simple_source_sink.yaml  simple_text_analysis.py  stream_generators.py  test_simple_source_sink.py  test_yaml_simple_source_sink.py  tutorial_prompts_to_python.md
for_instructors/: CLAUDE_CONTEXT.md  compiler_plan.md  module_plan.md  reorganization_checklist.md  template_article_pipeline.md  verification_report.md
gallery/: CLAUDE_CONTEXT.md  README.md
module_15_prompts/: demo_example_01_sentiment.py  demo_example_03_urgency.py  demo_example_04_triage.py  example_01_sentiment.py  example_02_spam.py  example_03_urgency.py
my_stocks/: office.md
scripts/: README.md  cleanup_for_release.py  reorganize_examples.py
search/: search_index.json
site/: index.html
tests/: RSS_to_list.py  conftest.py  sink_test.py  source_test.py  test_as_component.py  test_basic_network.py  test_compositionality.py  test_compositionality_double.py  test_connectors_simple.py  test_core.py  test_create_and_list_blocks.py  test_csv_to_reports.py  test_fanin.py  test_fanout.py  test_generators.py  test_graph_simple_source_sink.py  test_http_json_to_md.py  test_kit_readme_examples.py  test_live_digest.py  test_mcp_source.py  test_merge_synch.py  test_pipeline_simple.py  test_recorders.py  test_rss_digest.py  test_simple_source_sink.py  test_sink.py  test_sink_lib.py  test_source_lib.py  test_sources.py  test_split.py  test_termination.py  test_to_console_from_RSS_In.py  test_to_console_from_RSS_In_Batch.py  test_transform.py  test_transform_simple_entity_extractor.py  test_transform_simple_sentiment.py  transform_test.py
wardrobe_assistant/: README.md  index.html  package-lock.json  package.json  vite.config.js
(+1016 files in other folders)
