[project]
name = "dsl"
version = "0.1.0"
description = "Educational framework for distributed applications"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "K. Mani Chandy", email = "kmchandy@gmail.com" }]

# Core dependencies (matches requirements.txt)
dependencies = [
  "rich>=13.7.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.2",
  "lxml>=4.9.3",
  "websockets>=12.0",
  "tqdm>=4.66.0"
]

[project.optional-dependencies]
# Install only when needed
openai = ["openai>=1.3.7"]
numeric = ["numpy>=1.24", "scipy>=1.11"]
plots = ["matplotlib>=3.8"]
audio = ["soundfile>=0.12"]
rss = ["feedparser>=6.0.11"]

dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.0.0",      # Added for coverage
  "pytest-timeout>=2.1.0",  # Added for timeouts
  "ruff>=0.6.9",
  "black>=24.8.0",
  "build>=1.2.1",
  "twine>=5.1.1"
]

[project.urls]
Homepage = "https://github.com/kmchandy/DisSysLab"
Source = "https://github.com/kmchandy/DisSysLab"

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dsl*"]
exclude = ["tests*"]  # Changed: tests is at root level, not in dsl

[tool.setuptools.package-data]
"dsl" = ["py.typed", "**/*.json", "**/*.yaml", "**/*.yml", "**/*.txt", "**/*.md"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]  # ✅ Changed: tests at root level
addopts = "-v --tb=short --strict-markers"  # Added more useful defaults
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests"
]

# Optional tooling config 
[tool.ruff]
line-length = 100
target-version = "py38"
lint.select = ["E","F","I","UP","B"]

[tool.black]
line-length = 100
target-version = ["py38"]